<resources>
    <string name="app_name">inspection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">앱 설정</string>
    <string name="action_alarmlist">Push알림 리스트</string>

    <string name="menu_home">Home</string>

    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_notification_channel_name">test</string>
    <string name="default_notification_channel_description">test</string>
    <string name="fcm_message">FCM Message</string>

    <string name="push_notifications">Push 알림</string>
    <string name="push_notifications_summary_on">Push 알림이 활성화되었습니다.</string>
    <string name="push_notifications_summary_off">Push 알림이 비활성화되었습니다.</string>
    <string name="logout">로그아웃</string>
    <string name="logout_summary">계정에서 로그아웃합니다.</string>
</resources>